# ldapsearch-json

./: .pylintrc  Dockerfile  SECURITY.MD  SECURITY.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: build_container.yml  codeql-analysis.yml.disabled  dependency_review.yml  mypy.yml  pylint.yml  pytest.yml  testing.yml
ldapsearch_json/: __init__.py  __main__.py
tests/: test_cli.py  test_not_much.py
