[tool.poetry]
name = "ldapsearch-json"
version = "0.0.5"
description = "Script to dump LDAP data"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
ldap3 = "^2.9.1"
loguru = "^0.7.3"
typer = "^0.16.0"

[tool.poetry.dev-dependencies]
mypy = "^1.16"
types-ldap3 = "^2.9.13"
pytest = "^8.4.1"
ruff = "^0.12.0"

[tool.poetry.scripts]
ldapsearch-json = "ldapsearch_json.__main__:run_cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
