[tool.poetry]
name = "ldapsearch-json"
version = "0.0.5"
description = "Script to dump LDAP data"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
ldap3 = "^2.9.1"
loguru = "^0.7.3"
typer = "^0.20.0"

[tool.poetry.dev-dependencies]
mypy = "^1.19"
types-ldap3 = "^2.9.13"
pytest = "^9.0.1"
ruff = "^0.14.8"

[tool.poetry.scripts]
ldapsearch-json = "ldapsearch_json.__main__:run_cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
