
[project]
requires-python = ">=3.12"
dependencies = [
    "ldap3>=2.9.1",  # this is just here to stop the toml formatter from flattening the list
    "loguru>=0.7.3",
    "typer>=0.24.1",
]
name = "ldapsearch-json"
version = "0.0.6"
description = "Script to dump LDAP data"

[project.scripts]
ldapsearch-json = "ldapsearch_json.__main__:run_cli"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "ty>=0.0.23",
    "types-ldap3>=2.9.13.20251121",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
markers = ["live: requires LDAPSEARCH_* env vars and real LDAP connectivity"]
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
license = { text = "MIT" }
